fixed the bug issue of Next Question button not showing

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
 //MOBILE FIRST!!!! 
-
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&family=Silkscreen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Silkscreen&display=swap');
 
 * {
     padding: 0px;
@@ -18,7 +17,7 @@ $secondarycolor: hotpink;
     justify-content: center;
     margin-top: 20px;
     padding: -30px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Silkscreen";
 }
 
 body {
@@ -57,9 +56,9 @@ body {
         
         }
 
-    .game__button:active {
-        background-color: $secondarycolor;
-    } 
+    // .game__button:active {
+    //     background-color: $secondarycolor;
+    // } 
         
     }
 
@@ -67,9 +66,7 @@ body {
 
     }
 
-    .hide {
-        display: none;
-    }
+    
 
 
 }
@@ -138,9 +135,9 @@ body {
             
             }
     
-        .game__button:active {
-            background-color: $secondarycolor;
-        } 
+        // .game__button:active {
+        //     background-color: $secondarycolor;
+        // } 
             
         }
     
@@ -167,5 +164,36 @@ body {
 
 
 
+
 }
 
+.correct {
+    background-color: greenyellow;
+}
+
+.wrong {
+    background-color: slategray;
+}
+
+.hide {
+    display: none;
+}
+
+.princess {
+    width: 300px;
+    height: 300px;
+    margin: 0%;
+    padding: 0%;
+}
+
+.font-family {
+    font-family: "Silkscreen";
+}
+
+.show {
+    display: inline;
+}
+
+.nextQuestion {
+    background-color: $secondarycolor;
+}
